--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@apidevtools/json-schema-ref-parser",
-  "version": "0.0.0-dev",
+  "name": "@360mediadirect/json-schema-ref-parser",
+  "version": "9.0.9-axios1",
   "description": "Parse, Resolve, and Dereference JSON Schema $ref pointers",
   "keywords": [
     "json",
@@ -75,11 +75,14 @@
   "dependencies": {
     "@jsdevtools/ono": "^7.1.3",
     "@types/json-schema": "^7.0.6",
+    "axios": "^0.21.1",
     "call-me-maybe": "^1.0.1",
     "js-yaml": "^4.1.0"
   },
   "release": {
-    "branches": ["main"],
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
