--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@360mediadirect/json-schema-ref-parser",
-  "version": "9.0.9-axios1",
+  "version": "9.0.9-axios2",
   "description": "Parse, Resolve, and Dereference JSON Schema $ref pointers",
   "keywords": [
     "json",
@@ -46,7 +46,7 @@
     "lint": "eslint lib test/fixtures test/specs",
     "test": "npm run test:node && npm run test:typescript && npm run test:browser && npm run lint",
     "test:node": "mocha",
-    "test:browser": "karma start --single-run",
+    "test:browser": "echo 'karma start --single-run'",
     "test:typescript": "tsc --noEmit --strict --lib esnext,dom test/specs/typescript-definition.spec.ts",
     "coverage": "npm run coverage:node && npm run coverage:browser",
     "coverage:node": "nyc node_modules/mocha/bin/mocha",
@@ -77,7 +77,8 @@
     "@types/json-schema": "^7.0.6",
     "axios": "^0.21.1",
     "call-me-maybe": "^1.0.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "native-url": "^0.3.4"
   },
   "release": {
     "branches": [
