--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@360mediadirect/json-schema-ref-parser",
-  "version": "9.0.9-axios2",
+  "version": "9.0.9-axios3",
   "description": "Parse, Resolve, and Dereference JSON Schema $ref pointers",
   "keywords": [
     "json",
@@ -73,7 +73,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@jsdevtools/ono": "^7.1.3",
+    "@360mediadirect/ono": "^7.1.3-360md1",
     "@types/json-schema": "^7.0.6",
     "axios": "^0.21.1",
     "call-me-maybe": "^1.0.1",
