--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@360mediadirect/json-schema-ref-parser",
-  "version": "9.0.9-axios4",
+  "version": "9.0.9",
   "description": "Parse, Resolve, and Dereference JSON Schema $ref pointers",
   "keywords": [
     "json",
